--- a/GigaShop/Base.lproj/Main.storyboard
+++ b/GigaShop/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="353.66666666666669" height="709"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="cd7-R7-hOU">
-                                                        <rect key="frame" x="0.0" y="0.0" width="353.66666666666669" height="720"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="353.66666666666669" height="721.33333333333337"/>
                                                         <subviews>
                                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="z1g-Md-X9d">
                                                                 <rect key="frame" x="0.0" y="0.0" width="353.66666666666669" height="353.66666666666669"/>
@@ -83,14 +83,14 @@
                                                                     <constraint firstItem="xQv-Xf-JTu" firstAttribute="top" secondItem="z1g-Md-X9d" secondAttribute="top" id="dW0-Z2-XzG"/>
                                                                 </constraints>
                                                             </view>
-                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title: Green Shirt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yuo-qp-WQ1">
-                                                                <rect key="frame" x="0.0" y="373.66666666666669" width="353.66666666666669" height="20.333333333333314"/>
-                                                                <fontDescription key="fontDescription" name="Copperplate-Bold" family="Copperplate" pointSize="20"/>
+                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title: Green Shirt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yuo-qp-WQ1">
+                                                                <rect key="frame" x="0.0" y="373.66666666666669" width="353.66666666666669" height="21.666666666666686"/>
+                                                                <fontDescription key="fontDescription" name="Optima-Bold" family="Optima" pointSize="18"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="Qpn-XI-ZlU">
-                                                                <rect key="frame" x="0.0" y="414" width="353.66666666666669" height="27.333333333333314"/>
+                                                                <rect key="frame" x="0.0" y="415.33333333333337" width="353.66666666666669" height="27.333333333333314"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price: $120.5 " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x1L-4O-73X">
                                                                         <rect key="frame" x="0.0" y="0.0" width="138.33333333333334" height="27.333333333333332"/>
@@ -113,7 +113,7 @@
                                                                 </subviews>
                                                             </stackView>
                                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="5RM-lR-ug7">
-                                                                <rect key="frame" x="0.0" y="461.33333333333337" width="353.66666666666669" height="40.333333333333314"/>
+                                                                <rect key="frame" x="0.0" y="462.66666666666663" width="353.66666666666669" height="40.333333333333314"/>
                                                                 <subviews>
                                                                     <button opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m3u-Ac-f0B">
                                                                         <rect key="frame" x="0.0" y="0.0" width="167" height="40.333333333333336"/>
@@ -143,7 +143,7 @@
                                                                 </subviews>
                                                             </stackView>
                                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="aJ8-FE-Zlz">
-                                                                <rect key="frame" x="0.0" y="521.66666666666663" width="353.66666666666669" height="198.33333333333337"/>
+                                                                <rect key="frame" x="0.0" y="523" width="353.66666666666669" height="198.33333333333337"/>
                                                                 <subviews>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BNT-Jm-br9">
                                                                         <rect key="frame" x="0.0" y="0.0" width="81.666666666666671" height="35"/>
